@@ -1309,6 +1309,7 @@ GEN     rhorealnod(GEN x, GEN isqrtD);
 /* arith1.c */
 
 ulong   Fl_order(ulong a, ulong o, ulong p);
+GEN     Fl_powers_pre(ulong x, ulong n, ulong p, ulong pi);
 ulong   Fl_powu(ulong x, ulong n, ulong p);
 ulong   Fl_powu_pre(ulong x, ulong n, ulong p, ulong pi);
 ulong   Fl_sqrt(ulong a, ulong p);
